# Taller-Sostenibilidad

./: Dockerfile  README.md  pyproject.toml
src/taller_green_code/: __init__.py  modulo1_algoritmos.py  modulo2_cache.py  modulo3_estructuras.py  modulo4_carbon.py  modulo5_sci.py
src/taller_green_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_modulo1.py  test_modulo2.py  test_modulo3.py  test_modulo4.py  test_modulo5.py
